[HP] hide print button 20250821

--- a/templates/exam_preview.html
+++ b/templates/exam_preview.html
@@ -139,9 +139,9 @@
                 <a href="javascript:history.back()" class="btn btn-secondary me-2">
                     <i class="fas fa-arrow-left me-1"></i>Quay lại
                 </a>
-                <button onclick="window.print()" class="btn btn-outline-primary">
+                <!-- <button onclick="window.print()" class="btn btn-outline-primary">
                     <i class="fas fa-print me-1"></i>In đề thi
-                </button>
+                </button> -->
             </div>
         </div>
     </div>
