--- a/templates/admin_home.html
+++ b/templates/admin_home.html
@@ -64,7 +64,7 @@
 
 <div class="row">
     <div class="col-md-6">
-        <div class="card">
+        <!-- <div class="card">
             <div class="card-header">
                 <h5><i class="fas fa-tools"></i> Chức năng quản lý</h5>
             </div>
@@ -76,12 +76,12 @@
                     <a href="{% url 'exam_create' %}" class="list-group-item list-group-item-action">
                         <i class="fas fa-plus"></i> Tạo đề thi mới
                     </a>
-                    <a href="{% url 'admin_home' %}" class="list-group-item list-group-item-action">
+                     <a href="{% url 'admin_home' %}" class="list-group-item list-group-item-action">
                         <i class="fas fa-list"></i> Quản lý đề thi
                     </a>
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
     
     <div class="col-md-6">
@@ -124,7 +124,7 @@
         <div class="card">
             <div class="card-header d-flex justify-content-between align-items-center">
                 <h5><i class="fas fa-list"></i> Tất cả đề thi ({{ stats.total_exams }})</h5>
-                <a href="{% url 'exam_create' %}" class="btn btn-sm btn-success">
+                <a href="{% url 'import_docx' %}" class="btn btn-sm btn-success">
                     <i class="fas fa-plus"></i> Tạo đề thi mới
                 </a>
             </div>
